--- a/src/main/webapp/WEB-INF/html/test1.html
+++ b/src/main/webapp/WEB-INF/html/test1.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
+    <title>Test1</title>
     <!--引入jQuery-->
     <script src="../static/jquery-2.1.1.min.js"></script>
-
-    <meta charset="UTF-8">
-    <title>Test1</title>
     <script>
         function f1() {
             var inputValue = $("#input1").val();
@@ -16,7 +14,7 @@
 </head>
 <body>
     <h1>Hello World !</h1>
-    <p th:text="${background}">default message</p>
+    <p th:text="${str}">default message</p>
     <input id="input1" name="input1" value="" />
     <input type="button" id="btn" name="btn" value="点我" onclick="f1()"/>
 </body>
